Adding comment edit

--- a/mural/templates/mural/_user_suggestions_list.html
+++ b/mural/templates/mural/_user_suggestions_list.html
@@ -12,7 +12,7 @@
 		</a>
 	{% endfor %}
 {% else %}
-	<a href="#" class="list-group-item suggested-user">
+	<a class="list-group-item suggested-user">
 		<h4 class="text-center">{% trans 'No results found.' %}</h4>
 	</a>
 {% endif %}
