--- a/mural/templates/mural/_form_comment.html
+++ b/mural/templates/mural/_form_comment.html
@@ -73,16 +73,10 @@
 <div id="add-user-modal" style="display:none">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
-			<div class="modal-header">
-				<h3>{% trans 'Mark user in comment' %}</h3>
-			</div>
 			<div class="modal-body">
-				<p>{% trans 'Type the user name in the field below' %}</p>
 				<div class="form-group">
-					<input type="text" class="form-control" id="adduser_field" oninput="typing_search($(this));" />
-					<div class="suggestions list-group" data-url="{% url 'mural:suggest_users' %}" style="display:none">
-						
-					</div>
+					<input type="text" class="form-control" id="adduser_field" oninput="typing_search($(this));" placeholder="{% trans 'Insert here the name of the user you wish to mark in this comment' %}" />
+					<div class="suggestions list-group" data-url="{% url 'mural:suggest_users' %}" style="display:none"></div>
 				</div>
 			</div>
 			<div class="modal-footer">
