--- a/mural/templates/mural/_view_comment.html
+++ b/mural/templates/mural/_view_comment.html
@@ -1,4 +1,4 @@
-{% load i18n %}
+{% load i18n mural_filters %}
 
 <div id="comment-{{ comment.id }}" class="row comment">
 	<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 comment-img">
@@ -19,7 +19,7 @@
 	                	<i class="fa fa-ellipsis-v" aria-hidden="true"></i>
 	                </button>
 					<ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
-	                    <li><a onclick="editPost($(this));"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i> {% trans 'Edit' %}</a></li>
+	                    <li><a onclick="editComment($(this));" data-url="{% url 'mural:update_comment' comment.id %}" data-id="{{ comment.id }}" data-post="{{ comment.post.id }}"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i> {% trans 'Edit' %}</a></li>
 	                    <li>
 	                    <a onclick="deletePost($(this))" aria-hidden="true"><i class="fa fa-trash fa-fw" aria-hidden="true"></i> {% trans 'Remove' %}</a></li>
 	                </ul>
@@ -28,7 +28,7 @@
 		</h4>
 		<p class="comment-time">
 			<i class="fa fa-clock-o"></i>
-			{% trans 'In' %} {{ comment.last_update }}
+			{% trans 'In' %} {{ comment.last_update }} {{ comment|is_edited }}
 		</p>
 
 		{% autoescape off %}
