--- a/mural/templates/mural/delete.html
+++ b/mural/templates/mural/delete.html
@@ -5,7 +5,7 @@
         <div class="modal-body">
             <form id="delete_form" action="{{ form_url }}" method="post">
                 {% csrf_token %}
-                <h4>{% trans 'Are you sure you want to delete this post' %}?</h4>
+                <h4>{{ message }}</h4>
             </form>
         </div>
         <div class="modal-footer">
