--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -17,7 +17,8 @@ a:focus {
 
 
 .language-selector{
-    margin-right: 20px;
+    margin-right: 5px;
+    margin-top: -2px;
 }
 
 .language-selector img{
