--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -85,13 +85,13 @@
                                         </a>
                                         <ul class="dropdown-menu">
                                             <li class="active">
-                                              <a href="#">
+                                              <a href="#" class="language-item" value="pt_BR">
                                                 <img src="{% static "img/brazilicon.png" %}" />
-                                                <span>{% trans "PT-BR" %}</span>
+                                                <span>{% trans "pt_BR" %}</span>
                                               </a>
                                             </li>
                                             <li >
-                                              <a href="#">
+                                              <a href="#" class="language-item" value="EN">
                                                 <img src="{% static "img/euaicon.png" %}" />
                                                 <span>{% trans "EN" %}</span>
                                               </a>
