--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -85,13 +85,13 @@
                                         </a>
                                         <ul class="dropdown-menu">
                                             <li class="active">
-                                              <a href="#" class="language-item" value="pt_BR">
+                                              <a class="language-item" value-lang="pt-br">
                                                 <img src="{% static "img/brazilicon.png" %}" />
                                                 <span>{% trans "pt_BR" %}</span>
                                               </a>
                                             </li>
                                             <li >
-                                              <a href="#" class="language-item" value="EN">
+                                              <a  class="language-item" value-lang="en">
                                                 <img src="{% static "img/euaicon.png" %}" />
                                                 <span>{% trans "EN" %}</span>
                                               </a>
@@ -112,6 +112,8 @@
             </div>
         </div>
     </div>
+
+
 {% endblock%}
 
 {% block footer %}
