--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -96,29 +96,35 @@
                 <ul class="nav navbar-nav navbar-right notifications">
 
                       <li class="dropdown language-selector-on-header {{ settings_menu_active }}" title data-original-title="{% trans 'Language Selector' %}"> 
-                        <a href="#" class="dropdown-toggle hidden-xs" data-toggle="dropdown" data-close-others="true">
-                            <img src="{% static "img/brazilicon.png" %}" />
-                        </a>
+                       {% get_current_language as LANGUAGE_CODE %}
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-close-others="true">
 
-                        <a href="#" class="dropdown-toggle title" data-toggle="dropdown" data-close-others="true">
-                            <i class="fa fa-cog hidden-xs" aria-hidden="true"></i>
-                            <span class="visible-xs-inline">{% trans 'Language Selector' %}</span>
+                            {% with 'img/'|add:LANGUAGE_CODE|add:'.png' as image_static %}
+                                <img src="{% static image_static %}" />
+                            {% endwith %}
+                           
                         </a>
                         <ul class="dropdown-menu">
-                            <li >
-                              <a class="language-item" value="pt-br">
-                                <img src="{% static "img/brazilicon.png" %}" />
-                                <span>{% trans "pt_BR" %}</span>
-                              </a>
-                            </li>
-                            <li>
-                              <a  class="language-item" value="en">
-                                <img src="{% static "img/euaicon.png" %}" />
-                                <span>{% trans "EN" %}</span>
-                              </a>
-                            </li>
+
+                            
+                            {% get_available_languages as LANGUAGES %}
+                            {% get_language_info_list for LANGUAGES as languages %}
+                            {% for language in languages %}
+
+                                <li {% if language.code == LANGUAGE_CODE %}
+                                    class="active"
+                                {% endif %}>
+                                    <a class="language-item" value-lang="{{language.code}}">
+                                    {% with 'img/'|add:language.code|add:'.png' as image_static %}
+                                        <img src="{% static image_static %}" />
+                                    {% endwith %}
+                                        <span>{{language.code}}</span>
+                                    </a>
+                                </li>
+                               
+                            {% endfor %}
                         </ul>
-                </li>
+                    </li>
                    
 
                     <li id="profile-menu" class="dropdown" data-toggle="tooltip" data-placement="bottom" title data-original-title="{{ user }}">
