--- a/mural/templates/mural/_view.html
+++ b/mural/templates/mural/_view.html
@@ -43,6 +43,7 @@
 				<img src="{{ post.image.url }}" class="img-responsive center-block" />
 			{% endif %}
 		</div>
+		<button type="button" class="btn btn-block btn-default btn-sm see-complete" style="display:none">{% trans 'See complete post' %}</button>
 		<div class="col-md-12 comment-section">
 			<button type="button" class="btn btn-block btn-default btn-sm loading" style="display:none"><span class="fa fa-spin fa-circle-o-notch"></span></button>
 			<button type="button" onclick="loadComments($(this))" data-url="{% url 'mural:load_comments' post.mural_ptr_id post.id %}" data-post="{{ post.id }}" class="btn btn-block btn-default btn-sm load-btn">{% trans 'See more comments...' %}</button>
