--- a/subjects/templates/subjects/initial.html
+++ b/subjects/templates/subjects/initial.html
@@ -14,7 +14,7 @@
         {% endfor %}
     {% endif %}
     
-	<h2 class=" my-subjects-title"><b><i>{% trans "Palavras-chave mais populares" %}</i></b></h2>
+	<h2 class=" my-subjects-title"><b><i>{% trans "Most popular keywords" %}</i></b></h2>
 	<div id="" class="col-md-12">
 		<div class="users-cloud div-users-cloud">
 			<ul class=" users-cloud">
@@ -40,7 +40,7 @@
 	</div>
 	
 	<div class="col-md-12 cards-content">
-		<h2 class=" my-subjects-title"><b><i>{% trans "Meus Assuntos" %} ({{ total_subs }})</i></b></h2>
+		<h2 class=" my-subjects-title"><b><i>{% trans "My Subjects" %} ({{ total_subs }})</i></b></h2>
 
 		{% if subjects|length > 0 %}
 	    	<div class="panel-group" id="subject-accordion" role="tablist" aria-multiselectable="true">
